update chap 2 add slide links

--- a/01-prep.Rmd
+++ b/01-prep.Rmd
@@ -1,4 +1,7 @@
-# Preparing Datasets 
+# PREPARTION
+
+LINK TO: [Slide Show - Chapter 1](http://tysonbarrett.com/EDUC-6600/Slides/00_Ch1_Intro.html#1)
+
 
 ```{r global_options, include=FALSE}
 # set global chunk options...  
@@ -11,7 +14,9 @@ knitr::opts_chunk$set(comment     = NA,
 
 ---------------------------------------
 
-## ENVIRONMENT PREPARATION
+## Preparing the Environment
+
+
 
 ![](img/headers/library.png)
 
@@ -58,7 +63,7 @@ read_excel("Ihno_dataset.xls")
 
 ------------------------------------
 
-## OPPERATORS and HELPFUL FUNCTIONS
+## Opperators and Helpful Functions
 
 ### The `<-` Assignment Opperator: Save as a Name
 
@@ -192,7 +197,7 @@ data %>%
 
 -----------------------------------------
 
-## DATA WRANGLING
+## Data Wrangling
 
 
 ### The `dplyr::mutate()` Function: Create a New Variable
@@ -277,7 +282,9 @@ glimpse(dataF)
 --------------------------------
 
 
-## CREATING NEW VARIABLES: Assignment 0
+## Creating New Variables
+
+The following portion works through the assignment for Unit 0
 
 ### Question 2: Create a new variable = `mathquiz` + 50
 
