--- a/02-plots.Rmd
+++ b/02-plots.Rmd
@@ -1,4 +1,6 @@
-# Distributional Plots
+# EXAMINING A DISTRIBUTION
+
+LINK TO: [Slide Show - Chapter 2](http://tysonbarrett.com/EDUC-6600/Slides/01_Ch2_DataViz.html#1)
 
 ```{r global_options, include=FALSE}
 # set global chunk options...  
@@ -9,7 +11,9 @@ knitr::opts_chunk$set(comment     = NA,
                       message     = FALSE)
 ```
 
-```{r load_libraries, comment=NA}
+## Packages Needed {-}
+
+```{r load_libraries}
 library(tidyverse)
 library(readxl)
 library(furniture)
@@ -57,12 +61,12 @@ data_clean <- read_excel("Ihno_dataset.xls") %>%
 
 ## Frequency Distrubutions
 
+> These tables are best for showing the breakdown of a sample across the levels of a single CATEGORICAL variable.  They help pick out the mode(s) and identify unusual or impossible values.
 
 ```{r}
 data_clean %>%                 
   furniture::tableF(major)
 ```
-
 
 
 ```{r}
@@ -73,6 +77,10 @@ data_clean %>%
 ---------------------------------------
 
 ## Bar Charts
+
+> These plots are best for showing the breakdown of a sample across the levels of a single CATEGORICAL variable.  They help pick out the mode(s) and identify unusual or impossible values.
+
+**There must be SPACE between the bars!**
 
 ```{r}
 data_clean %>% 
@@ -92,12 +100,24 @@ data_clean %>%
 
 ## Histograms
 
+> These plots are best for showing the distribution of a single CONTINUOUS variable.  They help visually determine the shape, center *[mean, median, mode(s)]*, spread *[stadard deviation, range]*, and identify extreme or impossible values.
+
 ```{r}
 data_clean %>% 
   ggplot(aes(phobia)) +
   geom_histogram()
 ```
 
+**There must NOT be SPACE between the bars!**
+
+Notice how the bars do not touch.  This is because the default includes too many bars, many of which are not included in the dataset.  
+
+There are TWO ways specify somthing other than the default:
+
+(@) Change the NUMBER of bins: `bins = #`
+(@) Change the WIDTH of the bins: `binwidth = #`
+
+> If you try to do BOTH, only the first option will be used and the second will be ignored.
 
 ### Change the Number of Bins
 
@@ -117,7 +137,11 @@ data_clean %>%
 ```
 
 
+
 ### Make Seperate Panels -by- a Factor
+
+> To make seperate plots based on another variable, A FACTOR, we need to add a layer to the plot.
+
 
 ```{r}
 data_clean %>% 
@@ -136,7 +160,7 @@ data_clean %>%
 
 ------------------------------
 
-## Percentiles
+## Quartiles, Deciles, and Percentiles
 
 
 ### Deciles (break into 10% chunks)
