tidy up headers through chap 4

--- a/01-prep.Rmd
+++ b/01-prep.Rmd
@@ -1,7 +1,7 @@
-# PREPARTION
+# DATA PREPARTION
 
 
-## Chapter Links {-}
+**Chapter Links**
 
 * [Chapter 1 Slide Show](http://tysonbarrett.com/EDUC-6600/Slides/00_Ch1_Intro.html#1)
 
@@ -308,8 +308,6 @@ tibble::glimpse(dataF)
 
 --------------------------------
 
-
-## Creating New Variables
 
 The following portion works through the assignment for Unit 0
 
