add chapter 8 and bib styles

--- a/index.Rmd
+++ b/index.Rmd
@@ -8,11 +8,11 @@ github-repo: "SarBearSchwartz/Quant_I"
 cover-image: "img/Cohen_4ed.jpg"
 documentclass: book
 bibliography: [book.bib, packages.bib]
-biblio-style: apalike
+biblio-style: apa-5th-edition
 link-citations: yes
 description: "This book covers R code for the Cohen Textbook"
 no cite: |
-   @R-base @R-bookdown @R-knitr @R-rmarkdown @R-dplyr @R-tidyr @R-tibble @R-ggplot2 @R-readxl @R-haven @R-psych @R-furniture
+   @R-base @R-bookdown @R-knitr @R-rmarkdown @R-dplyr @R-tidyr @R-tibble @R-ggplot2 @R-readxl @R-haven @R-psych @R-furniture @R-car
 ---
 
 
@@ -35,26 +35,29 @@ The textbook is available through the USU library
 
 * [View and read it online for free](http://site.ebrary.com/lib/usulibraries/reader.action?docID=10809658)  
     + You must be either on campus or on the VPN
+    + You will need to log-on with your A-number and password
 
 * [Download the entire book for free](https://ebookcentral-proquest-com.dist.lib.usu.edu/lib/USU/detail.action?docID=1563061)
     + requires you to 
-        - create an account
+        - create an account with your A-number
         - download/install some software
     + only can be 'checked out' for 14 days
 
 ----------------------------
-**Course Files**
 
+**Course Files**   
+   
 All files may be downloaded from the [BOX folder](https://usu.app.box.com/s/nsnga773p9o823shxr243z39brmlc35y)  
-
+   
 * Icons and image files *(png or jpg)*
-
+   
 * Datasets *(excel or SPSS format)*
-
+   
 * Assignments *(pdf and Rmd)*
 
-
+   
 ----------------------------
+
 **Instructor Websites**
 
 * Sarah's website: [www.sarahschwartzstats.com](http://www.sarahschwartzstats.com/)
