--- a/packages.bib
+++ b/packages.bib
@@ -104,3 +104,14 @@
     note = {R package version 1.4.1},
     url = {https://CRAN.R-project.org/package=tibble},
   }
+  
+@Book{R-car,
+    title = {An {R} Companion to Applied Regression},
+    edition = {Second},
+    author = {John Fox and Sanford Weisberg},
+    year = {2011},
+    publisher = {Sage},
+    address = {Thousand Oaks {CA}},
+    url = {http://socserv.socsci.mcmaster.ca/jfox/Books/Companion},
+  } 
+  
