--- a/10-reg.Rmd
+++ b/10-reg.Rmd
@@ -21,6 +21,12 @@
 * [Inho's Dataset - Excel format](https://usu.box.com/s/hyky7eb24l6vvzj2xboedhcx1xolrpw1)
 
 
+**Related Readings**
+
+* [Linear Regression - Walkthrough in R](https://uc-r.github.io/linear_regression)
+
+* [Standard Error of the Regression vs. R-squared](http://statisticsbyjim.com/regression/standard-error-regression-vs-r-squared/)
+
 
 
 ```{r global_options, include=FALSE}
@@ -41,6 +47,8 @@ Required Packages
 library(tidyverse)    # Loads several very helpful 'tidy' packages
 library(haven)        # Read in SPSS datasets
 library(car)          # Companion for Applied Regression (and ANOVA)
+library(broom)        # Convert STatistical Analysis Objects into Tidy Dataframes
+library(magrittr)     # A Forward-Pipe Operator for R
 ```
 
 
@@ -77,10 +85,7 @@ cancer_clean %>%
 -------------------------------------------------------
 
 
-## Fitting a Simple Regression Model
-
-
-### Minimal Example
+## Visualize the Raw Data
 
 Always plot your data first!
 
@@ -89,8 +94,16 @@ cancer_clean %>%
   ggplot(aes(x = age,
              y = weighin)) +
   geom_point() +
-  geom_smooth(method = "lm")
+  geom_smooth(method = "lm",    se = TRUE, color = "blue") +  # straight line (linear model)
+  geom_smooth(method = "loess", se = FALSE, color = "red")   # loess line (moving window)
 ```
+
+
+-------------------------------------------------------
+
+
+## Fitting a Simple Regression Model
+
 
 The `lm()` function needs at least TWO arguments:
 
@@ -108,7 +121,13 @@ cancer_clean %>%
 ```
 
 
-> **NOTE:** To view more complete information, add a `summary()` step using a pipe AFTER the `lm()` step
+
+## Extracting Information From the Model
+
+### Model Overview
+
+
+To view more complete information, add a `summary()` step using a pipe AFTER the `lm()` step
 
 ```{r}
 cancer_clean %>% 
@@ -117,7 +136,7 @@ cancer_clean %>%
   summary()
 ```
 
-### Variable Designation Matters!
+> **NOTE - Variable Designation Matters!**
 
 In simple linear regression (with only one predictor DV), the slope estimate ($\hat{\beta_1}$) is different depending on the designation of $x$ and $y$ (two ordering), but the $p-values$ are the same.
 
@@ -129,11 +148,74 @@ cancer_clean %>%
   summary()
 ```
 
+### Model Fit or Accuracy
+
+One line for the entire model
+
+```{r}
+cancer_clean %>% 
+  lm(weighin ~ age,    
+     data = .) %>%     
+  broom::glance()
+```
+
+
+-------------------------------------------------------
+
+### Beta Estimates
+
+One line for each parameter, intercept and a slope for each predictor
+
+```{r}
+cancer_clean %>% 
+  lm(weighin ~ age,    
+     data = .) %>%     
+  broom::tidy()
+```
+
+
+## Confidence Intervals
+
+```{r}
+cancer_clean %>% 
+  lm(weighin ~ age,    
+     data = .) %>%     
+  confint()
+```
+
+
+### Predictions, Residuals, ect.
+
+One line for each subject in the original dataset
+
+```{r}
+cancer_clean %>% 
+  lm(weighin ~ age,    
+     data = .) %>%     
+  broom::augment()
+```
 
 
 
 
 
+----------------------------------
+
+## Model Diagnostics
+
+
+### Base R Graphics
+
+```{r}
+par(mfrow = c(2, 2))
+
+cancer_clean %>% 
+  lm(weighin ~ age,    
+     data = .) %>%     
+  plot()
+
+par(mfrow = c(1, 1))
+```
 
 
 
