--- a/09-corr.Rmd
+++ b/09-corr.Rmd
@@ -10,15 +10,15 @@
 
 
 
-**Assignment Links**
+**Unit Assignment Links**
 
-* [Unit 3 Assignment - Write Up Skeleton .pdf](https://usu.box.com/s/vjcsotiqwu1mwnwgzbfyig6k451ymgow)
+* Unit 3 Writen Part: [Skeleton - pdf](https://usu.box.com/s/vjcsotiqwu1mwnwgzbfyig6k451ymgow)
 
-* [Unit 3 Assignment - R Directions .pdf](https://usu.box.com/s/ectr9zx8qfbbm59h0qcexjreje5r9aio)
+* Unit 3 R Part: [Directions - pdf](https://usu.box.com/s/ectr9zx8qfbbm59h0qcexjreje5r9aio) and [Skeleton - Rmd](https://usu.box.com/s/k3vzw6nuq5tw66bxeptcyzth38pj69f9)
 
-* [Unit 3 Assignment - R Skeleton .Rmd](https://usu.box.com/s/k3vzw6nuq5tw66bxeptcyzth38pj69f9)
+* Unit 3 Reading to Summarize: [Article - pdf](https://usu.box.com/s/qmo57s03tbq02ks75p7eb5gad0ap05kg)
 
-* [Inho's Dataset - Excel format](https://usu.box.com/s/hyky7eb24l6vvzj2xboedhcx1xolrpw1)
+* Inho's Dataset: [Excel](https://usu.box.com/s/hyky7eb24l6vvzj2xboedhcx1xolrpw1)
 
 
 
@@ -67,7 +67,7 @@ cancer_clean <- cancer_raw %>%
 
 
 -------------------------------------------------------
--------------------------------------------------------
+
 
 
 ## Visualize the Raw Data
@@ -83,7 +83,7 @@ cancer_clean %>%
 ```
 
 -------------------------------------------------------
--------------------------------------------------------
+
 
 
 ## Pearson's Correlation Coefficient
@@ -181,7 +181,7 @@ cancer_clean %>%
 
 
 -------------------------------------------------------
--------------------------------------------------------
+
 
 
 ## Correlation Tables
@@ -232,7 +232,7 @@ cancer_clean %>%
 
 
 -------------------------------------------------------
--------------------------------------------------------
+
 
 ## Pairs Plots
 
@@ -289,7 +289,7 @@ cancer_clean %>%
 
 
 -------------------------------------------------------
--------------------------------------------------------
+
 
 ## Correlation Plots: Corrolagrams
 
