--- a/10-reg.Rmd
+++ b/10-reg.Rmd
@@ -10,16 +10,15 @@
 
 
 
-**Assignment Links**
+**Unit Assignment Links**
 
-* [Unit 3 Assignment - Write Up Skeleton .pdf](https://usu.box.com/s/vjcsotiqwu1mwnwgzbfyig6k451ymgow)
+* Unit 3 Writen Part: [Skeleton - pdf](https://usu.box.com/s/vjcsotiqwu1mwnwgzbfyig6k451ymgow)
 
-* [Unit 3 Assignment - R Directions .pdf](https://usu.box.com/s/ectr9zx8qfbbm59h0qcexjreje5r9aio)
+* Unit 3 R Part: [Directions - pdf](https://usu.box.com/s/ectr9zx8qfbbm59h0qcexjreje5r9aio) and [Skeleton - Rmd](https://usu.box.com/s/k3vzw6nuq5tw66bxeptcyzth38pj69f9)
 
-* [Unit 3 Assignment - R Skeleton .Rmd](https://usu.box.com/s/k3vzw6nuq5tw66bxeptcyzth38pj69f9)
+* Unit 3 Reading to Summarize: [Article - pdf](https://usu.box.com/s/qmo57s03tbq02ks75p7eb5gad0ap05kg)
 
-* [Inho's Dataset - Excel format](https://usu.box.com/s/hyky7eb24l6vvzj2xboedhcx1xolrpw1)
-
+* Inho's Dataset: [Excel](https://usu.box.com/s/hyky7eb24l6vvzj2xboedhcx1xolrpw1)
 
 **Related Readings**
 
@@ -74,7 +73,7 @@ cancer_clean <- cancer_raw %>%
 
 
 -------------------------------------------------------
--------------------------------------------------------
+
 
 
 ## Visualize the Raw Data
@@ -91,7 +90,7 @@ cancer_clean %>%
 ```
 
 -------------------------------------------------------
--------------------------------------------------------
+
 
 
 ## Fitting a Simple Regression Model
@@ -113,7 +112,7 @@ cancer_clean %>%
 ```
 
 -------------------------------------------------------
--------------------------------------------------------
+
 
 ## Extracting Information From the Model
 
@@ -198,7 +197,7 @@ cancer_clean %>%
 
 
 -------------------------------------------------------
--------------------------------------------------------
+
 
 ## Model Diagnostics
 
