--- a/16-mixedANOVA.Rmd
+++ b/16-mixedANOVA.Rmd
@@ -39,6 +39,32 @@ library(afex)         # Analysis of Factorial Experiments
 
 
 
+-----------------------------------------------------
+
+## Tutorial - Fitting Mixed Design ANOVA Models with `afex::aov_4()`
+
+The `aov_4()` function from the `afex` package fits ANOVA models (oneway, two-way, repeated measures, and mixed design). It needs at least two arguments:
+
+1. formula:  `continuous_var ~ group_var + (RM_var|id_var)`  *one observation per subject for each level of the `RMvar`, so each `id_var` has multiple lines for each subject, each subject can only belong to exactly one group./*
+
+2. dataset: `data = .` *we use the period to signify that the datset is being piped from above*
+
+
+Here is an outline of what your syntax should look like when you **fit and save a Mixed ANOVA**.  Of course you will replace the dataset name and the variable names, as well as the name you are saving it as.
+
+> **NOTE:** The `aov_4()` function works on data in LONG format only.  Each observation needs to be on its one line or row with seperate variables for the group membership (categorical factor or `fct`) and the continuous measurement (numberic or `dbl`).
+
+```{r EX_Mixaov_4, eval=FALSE}
+# RM ANOVA: fit and save
+aov_name <- data_name %>% 
+  afex::aov_4(continuous_var ~ group_var + (RM_var|id_var),
+              data = .)
+```
+
+
+
+
+
 ---------------------------------------------------
 
 
