tidy up chap 20

--- a/20-chiSq.Rmd
+++ b/20-chiSq.Rmd
@@ -36,6 +36,7 @@ Required Packages
 ```{r load_libraries}
 library(tidyverse)    # Loads several very helpful 'tidy' packages
 library(furniture)    # Nice tables (by our own Tyson Barrett)
+library(pander)       # Nice tables in genderal
 ```
 
 
@@ -43,11 +44,13 @@ library(furniture)    # Nice tables (by our own Tyson Barrett)
 -----------------------------------------------------
 
 
-## Goodenss of Fit (1-way) - Equally Likely
+## Goodenss of Fit (1-way) 
+
+### Observed Counts vs. Equally Likely Hypothesis
 
 **TEXTBOOK Example:** *Often, especially in an experimental context, the expected frequencies are based on more abstract theoretical considerations. For instance, imagine that a developmental psychologist is studying color preference in toddlers. Each child is told that he or she can take one toy out of four that are offered. All four toys are identical except for color: red, blue, yellow, or green. Forty children are run in the experiment, and their color preferences are as follows: red, 13; blue, 9; yellow, 15; and green, 3. These are the obtained frequencies. The expected frequencies depend on the null hypothesis. If the null hypothesis is that toddlers in general have no preference for color, we would expect the choices of colors to be equally divided among the entire population of toddlers. Hence, the expected frequencies would be 10 for each color.*
 
---------------------
+
 
 Use the `chisq.test()` function to perform a Goodnes-of-Fit or one-way Chi-Squared test to see if the observed counts are significantly different from being equally distributed. 
 
@@ -55,12 +58,14 @@ Use the `chisq.test()` function to perform a Goodnes-of-Fit or one-way Chi-Squar
 
 ```{r tutorial_chiSq_GoF_EL_test}
 # Run the 1-way chi-square test for equally likely
-chisq_toy_color <- c(red    = 13, blue   = 9, 
-                     yellow = 15, green  = 3) %>% 
+chisq_toy_color <- c(red    = 13, 
+                     blue   = 9, 
+                     yellow = 15, 
+                     green  = 3) %>% 
   chisq.test()                             # defaults to Equally likely
 ```
 
--------------------
+
 
 The following code chunk shows how to create and display a table of the observed and expected counts for any 1-way Chi-squated test.
 
@@ -71,7 +76,7 @@ rbind(Observed = chisq_toy_color$observed,
   pander::pander()
 ```
 
--------------------
+
 
 To display the full output, type and run the name the model is save as.
 
@@ -80,13 +85,17 @@ To display the full output, type and run the name the model is save as.
 chisq_toy_color
 ```
 
-\clearpage
 
-## Goodenss of Fit (1-way) - Hypothesised Probabilities
+
+-----------------------------------------------------
+
+
+
+### Observed counts vs. Hypothesised Probabilities
 
 **TEXTBOOK Example:** *Imagine that the population of a city is made up of three ethnic groups, which I will label A, B, and C.  The obtained frequencies were 28, 18, and 2. You could test the null hypothesis that sample is representatve of a population proportions which is half group A and a third group B.*
 
---------------------
+
 
 The `chisq.test()` function may also be used to perform a Goodnes-of-Fit or one-way Chi-Squared test to see if the observed counts are significantly different from thoes expected from a set of hypothesised probabilies. 
 
@@ -100,7 +109,7 @@ chisq_ethnic <- c(A = 28,
   chisq.test(p = c(1/2, 1/3, 1/6))      # declare the probabilities
 ```
 
--------------------
+
 
 Use the same code chunk to display a table of the observed and expected counts for any 1-way Chi-squated test.
 
@@ -113,7 +122,6 @@ rbind(Observed = chisq_ethnic$observed,
   pander::pander()
 ```
 
--------------------
 
 To display the full output, type and run the name the model is save as.
 
@@ -123,7 +131,7 @@ chisq_ethnic
 ```
 
 
-\clearpage
+-----------------------------------------------------
 
 ## Test for Independence (2-way) - vs. Association
 
@@ -150,7 +158,7 @@ woman_parents %>%
   pander::pander()
 ```
 
------------------
+
 
 The `chisq.test()` function may also be used to perform a two-way Chi-Squared test for independence.  In this case, the observed counts are compared to thoes expected if there is no association between the two factors.  
 
@@ -160,7 +168,7 @@ chisq_divorces <- woman_parents %>%
   chisq.test(correct = FALSE)     #IF 2x2, add correct = FALSE
 ```
 
--------------------
+
 
 To display the counts expected if the variables are independent, start with the model name  and add `$expected` at the end.  Then pipe on both the `addmargins()` and `pander::pander()` functions to print the counts. 
 
@@ -170,7 +178,7 @@ chisq_divorces$expected %>%
   pander::pander()
 ```
 
--------------------
+
 
 To display the full output, type and run the name the model is save as.
 
